# meet-in-the-middle

./: CMakeLists.txt  main.cpp
src/: DynamicArray.cpp  DynamicArray.hpp
tests/: DynamicArray_test.cpp
