cmake_minimum_required(VERSION 3.22.1)

project(meet_in_the_middle)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

Include(FetchContent)

FetchContent_Declare(
  Catch2
  GIT_REPOSITORY https://github.com/catchorg/Catch2.git
  GIT_TAG        v3.8.1
)

FetchContent_MakeAvailable(Catch2)

add_executable(DynamicArray_test tests/DynamicArray_test.cpp src/DynamicArray.cpp)
add_executable(main main.cpp src/DynamicArray.cpp)

target_link_libraries(DynamicArray_test PRIVATE Catch2::Catch2WithMain)
